--- a/Back-end-TestCovert/TestCovert/TestCovert.csproj
+++ b/Back-end-TestCovert/TestCovert/TestCovert.csproj
@@ -223,6 +223,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Upload\" />
     <Folder Include="Views\ConvertApi\" />
   </ItemGroup>
   <ItemGroup>
